chore: Spotless + Palantir 포매터 도입